# salice-hinge-boring-calculator

./: pyproject.toml  requirements.txt  streamlit_app.py
src/: hinges.py  main.py  models.py
