[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "salice-hinge-boring-calculator"
version = "0.1.0"
description = "A small hinge boring calculator."
authors = [
    { name = "Nick Nunley", email = "nunley702@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

# Dependencies you will definitely need for rapid UI + data work
dependencies = [
    "pydantic>=2.6",
    "numpy>=1.26",
    "pandas>=2.2",
    "streamlit>=1.38",
]

[tool.setuptools.packages.find]
where = ["src"]
